# regisbooks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  regissuite.generated.sln
clientlib/cs/RegisSuite.Books/: Client.cs
clientlib/py/: pyproject.toml
clientlib/py/tests/: test1.py
projects/regisbooks/: README.md
projects/regisbooks/tests/: conftest.py  manual_init.py  requirements.txt  server_url.py  test_website.py  utils.py
projects/regisbooks/website/: app.py  badges.py  deploy.py  requirements.txt  reset-db.py  secret_keys.py
projects/swdb/: README.md
tests/: conftest.py  manual_init.py  test_website.py
website/: app.py  badges.py  genid.py  logsetup.py  requirements.txt  secret_keys.py
website/admtools/: normalize-badges.py  rem-book.py  rem-listing.py  reset-stats.py  set-eng-flag.py
website/html/: 404.html
website/root/: index.py
website/root/about/: index.html
website/root/acknowledgement/: index.html
website/root/add-listing/: index.html
website/root/edit-listing/: index.html
website/root/enter-isbn/: index.html
website/root/goto-auth/: index.py
website/root/help/: index.html
website/root/leaderboard/: index.html
website/root/logout/: index.html
website/root/requests-dash/: index.html
website/root/view-books/: index.html
website/root/view-listing/: index.html
website/root/view-listings/: index.html
website/root/view-profile/: index.html
website/scripts/: reset-lcl-db.py
website/static/: manifest.json
website/static/css/: add-listing.css  buttons.css  enter-isbn.css  sidebar.css  user-link.css  (+2 more)
(+80 files in other folders)
