[project]
name = "regisbooks"
version = "1.0.0"
description = "The Regis Book Exchange!"
authors = [
    {name = "User0332",email = "carlzfurtado@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "webpy-framework (>=3.0.0,<4.0.0)",
    "propelauth-flask (>=4.4.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "isbnlib (>=3.10.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
