[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regis-books"
version = "2.0.2"
description = "Regis Books API Client Library for Python"
readme = "README.md"
authors = [{ name = "Carl Furtado", email = "carlzfurtado@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: MIT License"
]
dependencies = [
    "httpx"
]
requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/User0332/regissuite"

[tool.setuptools]
packages = ["regisbooks"]